// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`saveUcastSuccess() - nový účastník 1`] = `
Object {
  "allIds": Array [
    "6f09b1fd371dec1e99b7e1c9",
    "5a09b1fd371dec1e99b7e1c9",
    "7a09b1fd371dec1e99b7e142",
    "7a09b1fd371dec1e99b79853",
  ],
  "byIds": Object {
    "5a09b1fd371dec1e99b7e1c9": Object {
      "2017": Object {
        "prihlaska": Object {
          "datum": "2017-04-01T00:00:00.000Z",
          "kategorie": "5a587e1a051c181132cf83bc",
          "kod": "10728863",
        },
        "udaje": Object {
          "jmeno": "Roman",
          "narozeni": Object {
            "rok": 1958,
          },
          "obec": "Ostrava 1",
          "pohlavi": "muž",
          "prijmeni": "Balabák",
          "stat": "Česká republika",
        },
        "vykon": Object {
          "cas": "PT1H25M32.6S",
          "dokonceno": true,
          "kategorie": "5a587e1a051c181132cf83bc",
          "startCislo": 34,
        },
      },
      "2018": Object {
        "platby": Array [
          Object {
            "castka": 250,
            "datum": "2018-06-09T00:00:00.000Z",
            "typ": "hotově",
          },
        ],
        "prihlaska": Object {
          "datum": "2018-06-09T00:00:00.000Z",
          "kategorie": "5a587e1b051c181132cf83d7",
          "kod": "10728864",
          "startCislo": 17,
        },
        "udaje": Object {
          "jmeno": "Roman",
          "narozeni": Object {
            "rok": 1956,
          },
          "obec": "Ostrava 2",
          "pohlavi": "muž",
          "prijmeni": "Balabák",
          "stat": "Česká republika",
        },
        "vykon": Object {
          "dokonceno": false,
          "kategorie": "5a587e1b051c181132cf83d7",
          "startCislo": 15,
        },
      },
      "roky": Array [
        2018,
        2017,
      ],
    },
    "6f09b1fd371dec1e99b7e1c9": Object {
      "2016": Object {
        "prihlaska": Object {
          "datum": "2016-06-11T00:00:00.000Z",
          "kategorie": "5a587e1a051c181132cf83c2",
        },
        "udaje": Object {
          "jmeno": "Martina",
          "narozeni": Object {
            "den": 7,
            "mesic": 12,
            "rok": 1963,
          },
          "obec": "Zlín",
          "pohlavi": "žena",
          "prijmeni": "Sukdoláková",
          "stat": "Česká republika",
        },
        "vykon": Object {
          "cas": "PT3H42M32.6S",
          "dokonceno": true,
          "kategorie": "5a587e1a051c181132cf83c2",
          "startCislo": 11,
        },
      },
      "roky": Array [
        2016,
      ],
    },
    "7a09b1fd371dec1e99b79853": Object {
      "2018": Object {
        "platby": Array [
          Object {
            "castka": 200,
            "datum": "2018-05-12T00:00:00.000Z",
            "typ": "složenkou",
          },
        ],
        "prihlaska": Object {
          "datum": "2018-05-12T00:00:00.000Z",
          "kategorie": "5a587e1b051c181132cf83d9",
          "kod": "===kod===",
          "mladistvyPotvrzen": undefined,
          "startCislo": 15,
        },
        "udaje": Object {
          "adresa": "Za elektrárnou 21",
          "jmeno": "Bára",
          "narozeni": Object {
            "den": 4,
            "mesic": 10,
            "rok": 1998,
          },
          "obec": "Mieroszow",
          "pohlavi": "žena",
          "prijmeni": "Malá",
          "stat": "Polsko",
        },
      },
      "roky": Array [
        2018,
      ],
    },
    "7a09b1fd371dec1e99b7e142": Object {
      "2018": Object {
        "platby": Array [
          Object {
            "castka": 100,
            "datum": "2018-06-09T00:00:00.000Z",
            "typ": "hotově",
          },
        ],
        "prihlaska": Object {
          "datum": "2018-06-09T00:00:00.000Z",
          "kategorie": "5a587e1b051c181132cf83d9",
          "kod": "abc023skd204mvs345",
          "startCislo": 10,
        },
        "udaje": Object {
          "email": "zrala.kl@s.cz",
          "jmeno": "Hana",
          "klub": "SK Nudle",
          "narozeni": Object {
            "den": 25,
            "mesic": 7,
            "rok": 1999,
          },
          "obec": "Bučovice",
          "pohlavi": "žena",
          "prijmeni": "Zralá",
          "psc": "654 21",
          "stat": "Česká republika",
        },
        "vykon": Object {
          "cas": "PT2H06M32.6S",
          "dokonceno": true,
          "kategorie": "5a587e1b051c181132cf83d9",
          "startCislo": 11,
        },
      },
      "roky": Array [
        2018,
      ],
    },
  },
}
`;

exports[`saveUcastSuccess() - stávající účastník - nový rok 1`] = `
Object {
  "allIds": Array [
    "6f09b1fd371dec1e99b7e1c9",
    "5a09b1fd371dec1e99b7e1c9",
    "7a09b1fd371dec1e99b7e142",
  ],
  "byIds": Object {
    "5a09b1fd371dec1e99b7e1c9": Object {
      "2017": Object {
        "prihlaska": Object {
          "datum": "2017-04-01T00:00:00.000Z",
          "kategorie": "5a587e1a051c181132cf83bc",
          "kod": "10728863",
        },
        "udaje": Object {
          "jmeno": "Roman",
          "narozeni": Object {
            "rok": 1958,
          },
          "obec": "Ostrava 1",
          "pohlavi": "muž",
          "prijmeni": "Balabák",
          "stat": "Česká republika",
        },
        "vykon": Object {
          "cas": "PT1H25M32.6S",
          "dokonceno": true,
          "kategorie": "5a587e1a051c181132cf83bc",
          "startCislo": 34,
        },
      },
      "2018": Object {
        "platby": Array [
          Object {
            "castka": 250,
            "datum": "2018-06-09T00:00:00.000Z",
            "typ": "hotově",
          },
        ],
        "prihlaska": Object {
          "datum": "2018-06-09T00:00:00.000Z",
          "kategorie": "5a587e1b051c181132cf83d7",
          "kod": "10728864",
          "startCislo": 17,
        },
        "udaje": Object {
          "jmeno": "Roman",
          "narozeni": Object {
            "rok": 1956,
          },
          "obec": "Ostrava 2",
          "pohlavi": "muž",
          "prijmeni": "Balabák",
          "stat": "Česká republika",
        },
        "vykon": Object {
          "dokonceno": false,
          "kategorie": "5a587e1b051c181132cf83d7",
          "startCislo": 15,
        },
      },
      "roky": Array [
        2018,
        2017,
      ],
    },
    "6f09b1fd371dec1e99b7e1c9": Object {
      "2016": Object {
        "prihlaska": Object {
          "datum": "2016-06-11T00:00:00.000Z",
          "kategorie": "5a587e1a051c181132cf83c2",
        },
        "udaje": Object {
          "jmeno": "Martina",
          "narozeni": Object {
            "den": 7,
            "mesic": 12,
            "rok": 1963,
          },
          "obec": "Zlín",
          "pohlavi": "žena",
          "prijmeni": "Sukdoláková",
          "stat": "Česká republika",
        },
        "vykon": Object {
          "cas": "PT3H42M32.6S",
          "dokonceno": true,
          "kategorie": "5a587e1a051c181132cf83c2",
          "startCislo": 11,
        },
      },
      "2018": Object {
        "platby": Array [
          Object {
            "castka": 200,
            "datum": "2018-05-12T00:00:00.000Z",
            "typ": "převodem",
          },
        ],
        "prihlaska": Object {
          "datum": "2018-05-12T00:00:00.000Z",
          "kategorie": "5a587e1b051c181132cf83db",
          "kod": "===kod===",
          "mladistvyPotvrzen": undefined,
          "startCislo": 15,
        },
        "udaje": Object {
          "jmeno": "Martina",
          "klub": "SK Nudle",
          "narozeni": Object {
            "den": 7,
            "mesic": 12,
            "rok": 1963,
          },
          "obec": "Zlín",
          "pohlavi": "žena",
          "prijmeni": "Sukdoláková",
          "stat": "Česká republika",
        },
      },
      "roky": Array [
        2018,
        2016,
      ],
    },
    "7a09b1fd371dec1e99b7e142": Object {
      "2018": Object {
        "platby": Array [
          Object {
            "castka": 100,
            "datum": "2018-06-09T00:00:00.000Z",
            "typ": "hotově",
          },
        ],
        "prihlaska": Object {
          "datum": "2018-06-09T00:00:00.000Z",
          "kategorie": "5a587e1b051c181132cf83d9",
          "kod": "abc023skd204mvs345",
          "startCislo": 10,
        },
        "udaje": Object {
          "email": "zrala.kl@s.cz",
          "jmeno": "Hana",
          "klub": "SK Nudle",
          "narozeni": Object {
            "den": 25,
            "mesic": 7,
            "rok": 1999,
          },
          "obec": "Bučovice",
          "pohlavi": "žena",
          "prijmeni": "Zralá",
          "psc": "654 21",
          "stat": "Česká republika",
        },
        "vykon": Object {
          "cas": "PT2H06M32.6S",
          "dokonceno": true,
          "kategorie": "5a587e1b051c181132cf83d9",
          "startCislo": 11,
        },
      },
      "roky": Array [
        2018,
      ],
    },
  },
}
`;

exports[`saveUcastSuccess() - stávající účastník - stávající rok 1`] = `
Object {
  "allIds": Array [
    "6f09b1fd371dec1e99b7e1c9",
    "5a09b1fd371dec1e99b7e1c9",
    "7a09b1fd371dec1e99b7e142",
  ],
  "byIds": Object {
    "5a09b1fd371dec1e99b7e1c9": Object {
      "2017": Object {
        "prihlaska": Object {
          "datum": "2017-04-01T00:00:00.000Z",
          "kategorie": "5a587e1a051c181132cf83bc",
          "kod": "10728863",
        },
        "udaje": Object {
          "jmeno": "Roman",
          "narozeni": Object {
            "rok": 1958,
          },
          "obec": "Ostrava 1",
          "pohlavi": "muž",
          "prijmeni": "Balabák",
          "stat": "Česká republika",
        },
        "vykon": Object {
          "cas": "PT1H25M32.6S",
          "dokonceno": true,
          "kategorie": "5a587e1a051c181132cf83bc",
          "startCislo": 34,
        },
      },
      "2018": Object {
        "platby": Array [],
        "prihlaska": Object {
          "datum": "2018-06-09T00:00:00.000Z",
          "kategorie": "5a587e1b051c181132cf83d7",
          "kod": "10728864",
          "startCislo": 18,
        },
        "udaje": Object {
          "jmeno": "Roman",
          "narozeni": Object {
            "rok": 1956,
          },
          "obec": "Ostrava 2",
          "pohlavi": "muž",
          "prijmeni": "Balabák",
          "stat": "Česká republika",
        },
        "vykon": Object {
          "dokonceno": false,
          "kategorie": "5a587e1b051c181132cf83d7",
          "startCislo": 15,
        },
      },
      "roky": Array [
        2018,
        2017,
      ],
    },
    "6f09b1fd371dec1e99b7e1c9": Object {
      "2016": Object {
        "prihlaska": Object {
          "datum": "2016-06-11T00:00:00.000Z",
          "kategorie": "5a587e1a051c181132cf83c2",
        },
        "udaje": Object {
          "jmeno": "Martina",
          "narozeni": Object {
            "den": 7,
            "mesic": 12,
            "rok": 1963,
          },
          "obec": "Zlín",
          "pohlavi": "žena",
          "prijmeni": "Sukdoláková",
          "stat": "Česká republika",
        },
        "vykon": Object {
          "cas": "PT3H42M32.6S",
          "dokonceno": true,
          "kategorie": "5a587e1a051c181132cf83c2",
          "startCislo": 11,
        },
      },
      "roky": Array [
        2016,
      ],
    },
    "7a09b1fd371dec1e99b7e142": Object {
      "2018": Object {
        "platby": Array [
          Object {
            "castka": 100,
            "datum": "2018-06-09T00:00:00.000Z",
            "typ": "hotově",
          },
        ],
        "prihlaska": Object {
          "datum": "2018-06-09T00:00:00.000Z",
          "kategorie": "5a587e1b051c181132cf83d9",
          "kod": "abc023skd204mvs345",
          "startCislo": 10,
        },
        "udaje": Object {
          "email": "zrala.kl@s.cz",
          "jmeno": "Hana",
          "klub": "SK Nudle",
          "narozeni": Object {
            "den": 25,
            "mesic": 7,
            "rok": 1999,
          },
          "obec": "Bučovice",
          "pohlavi": "žena",
          "prijmeni": "Zralá",
          "psc": "654 21",
          "stat": "Česká republika",
        },
        "vykon": Object {
          "cas": "PT2H06M32.6S",
          "dokonceno": true,
          "kategorie": "5a587e1b051c181132cf83d9",
          "startCislo": 11,
        },
      },
      "roky": Array [
        2018,
      ],
    },
  },
}
`;
